# mangodl

./: .gitignore  MANIFEST.in  README.md  chapter.py  constants.py  errors.py  fs.py  helpers.py  main.py  manga.py  mango-runner.py  mango.py  mango_runner.py  mangodl_runner.py  pyproject.toml  requirements.txt  search.py  setup.cfg
mango/: __main__.py  chapter.py  cli.py  filesys.py  fs.py  helpers.py  login.py  main.py  manga.py  mango.py  mango_config.py  mango_lite.py  search.py
mango/config/: mango.ini  mango_config.ini  mango_config.py
mango/mango_logging/: mango_logging.ini
mango_logging/: mango_logging.py
mangodl/: __main__.py  chapter.py  cli.py  filesys.py  helpers.py  login.py  manga.py  mangodl.py  search.py
mangodl/config/: mangodl_config.py
mangodl/mangodl_logging/: mangodl_logging.ini  mangodl_logging.py
tests/: test_helpers.py
