[metadata]
name = mangodl
version = 0.1.0
author = Junyi
author_email = junyidotli@gmail.com
description = A command line tool to download manga from mangadex
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JunLi00/mango

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    aiofiles>=0.6.0
    aiohttp>=3.7.4.post0
    requests>=2.25.1
    urllib3>=1.26.3
    lxml>=4.6.2
    beautifulsoup4>=4.9.3
    tqdm>=4.59.0


[options.entry_points]
console_scripts =
    mango = mango.mango:main

[options.packages.find]
exclude = tests